tests/type_tests/negatives/maybe_pure.py
from zen import Just, Maybe


def test() -> Maybe[int]:
	return Just('test')
